# space-agent-os

./: .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  CHANGELOG-BUILD-SESSIONS-APR-2026.md  CLAUDE.md  LINEAR_PLAN.md  MISSION.md  README.md  TEST_RESULTS.md  boot.sh  package.json  pnpm-lock.yaml
apps/core/: .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SETUP.md  TASKS.md  TASKS_DONE.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  start_discord_bot.py  start_discord_bot.sh  verify_ignition.py
apps/core/agent_mcp/: README.md  __init__.py  server.py
apps/core/agents/: __init__.py  api_expert.py  backend_engineer.py  base_agent.py  context_agent.py  dev_agents.py  discord_bot.py  domain_agent.py  frontend_engineer.py  heartbeat.py  intent_router.py  lead_architect.py  lead_designer.py  marketing_agent.py  orchestrator.py  pipeline.py  planner_agent.py  pm_agent.py  researcher_agent.py  reviewer_agent.py  role_spec.py  sales_agent.py  worker.py
apps/core/api/: __init__.py  main.py
apps/core/brain/: __init__.py  __main__.py  assembler.py  cli.py  extractor.py  hooks.py  loader.py  selector.py
apps/core/channels/: __init__.py  discord_channel.py  telegram_channel.py
apps/core/config/: channels.yml  models.yml  network.yml  nginx.conf
apps/core/execution/: __init__.py  backend.py
apps/core/integrations/: github_connector.py
apps/core/mcp/: server.py
apps/core/memory/: 2026-03-26.md  __init__.py  claude_mem.py  conversation.py  vector_store.py
apps/core/orchestration/: __init__.py  (+6 more)
(+245 files in other folders)
