[project]
name = "space-claw"
version = "1.0.0"
description = "Local-first 24/7 personal AI assistant"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "discord-py>=2.4.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102"]
